[project]
name = "deep-search-osint"
version = "0.1.0"
description = "Passive domain reconnaissance: subdomains, WHOIS, DNS records, metadata, and clean investigative reports."
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "python-multipart>=0.0.9"]
[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]
[tool.pytest.ini_options]
pythonpath = ["."]
